DFR-5006_Cron_Update_Contact_details-2 (#2960)
* DFR-5006_Cron_Update_Contact_details-2

* DFR-5006_Cron_Update_Contact_details-3

* Check RepresentationUpdateHistory and data fix for invalid emails

* Add a demo test case

* Review

* Demo CS case

* Trigger a new build